@@ -52,6 +52,7 @@ QtCurveKWinConfig::QtCurveKWinConfig(KConfig *config, QWidget *parent)
     connect(itsWidget->resizeGrip, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
     connect(itsWidget->roundBottom, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
     connect(itsWidget->outerBorder, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
+    connect(itsWidget->titleBarPad, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
 }
 
 QtCurveKWinConfig::~QtCurveKWinConfig()
@@ -73,6 +74,7 @@ void QtCurveKWinConfig::load(const KConfigGroup &)
     itsWidget->outerBorder->setChecked(configGroup.hasKey("NoBorder")
                                         ? !configGroup.readEntry("NoBorder", false)
                                         : configGroup.readEntry("OuterBorder", true));
+    itsWidget->titleBarPad->setValue(configGroup.readEntry("TitleBarPad", 0));
 }
 
 void QtCurveKWinConfig::save(KConfigGroup &)
@@ -86,6 +88,7 @@ void QtCurveKWinConfig::save(KConfigGroup &)
     configGroup.writeEntry("ShowResizeGrip", itsWidget->resizeGrip->isChecked());
     configGroup.writeEntry("RoundBottom", itsWidget->roundBottom->isChecked());
     configGroup.writeEntry("OuterBorder", itsWidget->outerBorder->isChecked());
+    configGroup.writeEntry("TitleBarPad", itsWidget->titleBarPad->value());
     configGroup.deleteEntry("NoBorder");
     itsConfig->sync();
 }
@@ -99,6 +102,7 @@ void QtCurveKWinConfig::defaults()
     itsWidget->resizeGrip->setChecked(false);
     itsWidget->roundBottom->setChecked(true);
     itsWidget->outerBorder->setChecked(true);
+    itsWidget->titleBarPad->setValue(0);
 }
 
 extern "C"
