@@ -6,50 +6,99 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>541</width>
-    <height>245</height>
+    <width>669</width>
+    <height>226</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QCheckBox" name="coloredShadow">
-     <property name="whatsThis">
-      <string>Check this option if you want the active window to have a colored glow instead of a shadow.</string>
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="text">
-      <string>Give active window a 'glow' when shadows are enabled</string>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
      </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="menuClose">
-     <property name="whatsThis">
-      <string>Check this option if you want windows to be closed when you double click the menu button, similar to Microsoft Windows.</string>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
      </property>
-     <property name="text">
-      <string>Close windows by double clicking the menu button</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="resizeGrip">
-     <property name="text">
-      <string>Show resize grip</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="roundBottom">
-     <property name="text">
-      <string>Round bottom corners (applies only when style is round, and borders are not tiny)</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="outerBorder">
-     <property name="text">
-      <string>Draw dark outer border.</string>
-     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Closing:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="menuClose">
+        <property name="whatsThis">
+         <string>Check this option if you want windows to be closed when you double click the menu button, similar to Microsoft Windows.</string>
+        </property>
+        <property name="text">
+         <string>Close windows by double clicking the menu button</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Borders:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="resizeGrip">
+        <property name="text">
+         <string>Show resize grip</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QCheckBox" name="roundBottom">
+        <property name="text">
+         <string>Round bottom corners (applies only when style is round, and borders are not tiny)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QCheckBox" name="outerBorder">
+        <property name="text">
+         <string>Draw dark outer border.</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QCheckBox" name="coloredShadow">
+        <property name="whatsThis">
+         <string>Check this option if you want the active window to have a colored glow instead of a shadow.</string>
+        </property>
+        <property name="text">
+         <string>Give active window a 'glow' when shadows are enabled</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Titlebar padding:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="KIntSpinBox" name="titleBarPad">
+        <property name="suffix">
+         <string>px</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -85,6 +134,21 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KIntSpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>knuminput.h</header>
+  </customwidget>
+ </customwidgets>
+ <tabstops>
+  <tabstop>menuClose</tabstop>
+  <tabstop>resizeGrip</tabstop>
+  <tabstop>roundBottom</tabstop>
+  <tabstop>outerBorder</tabstop>
+  <tabstop>coloredShadow</tabstop>
+  <tabstop>titleBarPad</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
